[tool.poetry]
name = "dramatiq_azure"
version = "0.1.1"
description = "Azure Queue Brokers for Dramatiq"
authors = ["Stanislas H.B. Sodonon <stanislas.sodonon@gmail.com>"]
repository = "https://github.com/bidossessi/dramatiq-azure"
readme = 'README.md'
keywords = ['dramatiq', 'azure', 'queue', 'broker']
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
dramatiq = "^1.12.0"
azure-core = "^1.20.1"
azure-storage-queue = "^12.1.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.11b1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy = "^0.910"
twine = "^3.6.0"
pytest-env = "^0.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | dist
  | build
  | docs
)/
'''
include = '\.pyi?$'
line-length = 120