
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.1"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version",
    "dramatiq_azure/__version__.py",
]

[tool.poetry]
name = "dramatiq_azure"
version = "0.3.1"
description = "Azure Queue Brokers for Dramatiq"
authors = ["Stanislas H.B. Sodonon <stanislas.sodonon@gmail.com>"]
repository = "https://github.com/bidossessi/dramatiq-azure"
readme = 'README.md'
keywords = ['dramatiq', 'azure', 'queue', 'broker']
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
dramatiq = "^1.12.0"
azure-core = "^1.20.1"
azure-storage-queue = "^12.1.6"
azure-identity = {version = ">=1.13,<1.15", optional = true}

[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.5"
pytest-env = "^0.8.2"
commitizen = "^3.6.0"
pre-commit = ">=2.17,<4.0"

[tool.poetry.group.dev.dependencies]
flake8-bugbear = "^23.7.10"
mccabe = "^0.7.0"
isort = "^5.12.0"

[tool.poetry.extras]
identity = ["azure-identity"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | dist
  | build
  | docs
)/
'''
include = '\.pyi?$'
line-length = 80

[tool.isort]
atomic = true
combine_as_imports = true
group_by_package = true
force_alphabetical_sort_within_sections = true
force_grid_wrap = 2
line_length = 80
multi_line_output = 3
profile = "black"
